--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -1172,6 +1172,56 @@ SELECT {
 {english:"to solve, to work out", spanish:"resolver",englishPhrase:"it's a problem we must solve together", spanishPhrase:"es un problema que debemos resolver juntos",module:"module 19",type:"words"},
 {english:"contact", spanish:"contacto (m)",englishPhrase:"did you have contact with him previously?", spanishPhrase:"¿tuviste contacto con él anteriormente?",module:"module 19",type:"words"},
 {english:"news", spanish:"noticia (f)",englishPhrase:"we're watching the news", spanishPhrase:"estamos viendo las noticias",module:"module 19",type:"words"},
+{english:"season", spanish:"temporada (f)",englishPhrase:"summer is my favorite season", spanishPhrase:"el verano es mi temporada favorita",module:"module 20",type:"words"},
+{english:"painter", spanish:"pintor/a",englishPhrase:"a painting by a famous painter", spanishPhrase:"un caudro de un pintor famoso",module:"module 20",type:"words"},
+{english:"rock", spanish:"roca (f)",englishPhrase:"I cut my foot on a rock", spanishPhrase:"me corté el pie en una roca",module:"module 20",type:"words"},
+{english:"to arm, put together", spanish:"armar",englishPhrase:"he's putting the new table together", spanishPhrase:"está armando la nueva mesa",module:"module 20",type:"words"},
+{english:"spiritual", spanish:"espiritual",englishPhrase:"it's a very spiritual place", spanishPhrase:"es un lugar muy espiritual",module:"module 20",type:"words"},
+{english:"exception", spanish:"excepción (f)",englishPhrase:"the exception to the rule", spanishPhrase:"la excepción a la regla",module:"module 20",type:"words"},
+{english:"to wash", spanish:"lavar",englishPhrase:"I'm going to wash my hair", spanishPhrase:"voy a lavarme el pelo",module:"module 20",type:"words"},
+{english:"to cover", spanish:"cubrir, tapar",englishPhrase:"we should cover it before he sees it", spanishPhrase:"deberíamos cubrirlo antes de que lo vea",module:"module 20",type:"words"},
+{english:"cup", spanish:"taza (f)",englishPhrase:"a cup of coffee in the morning", spanishPhrase:"una taza de café en la mañana",module:"module 20",type:"words"},
+{english:"ridiculous", spanish:"ridiculo/a",englishPhrase:"the situation is ridiculous", spanishPhrase:"la situación es ridicula",module:"module 20",type:"words"},
+{english:"exotic", spanish:"exótico/a",englishPhrase:"we travelled to an exotic location", spanishPhrase:"viajamos a un lugar exótico",module:"module 20",type:"words"},
+{english:"trade union", spanish:"sindicato (m)",englishPhrase:"it's a powerful trade union", spanishPhrase:"es un sindicato muy poderoso",module:"module 20",type:"words"},
+{english:"probability", spanish:"probabilidad (f)",englishPhrase:"what is the probability of it happening again?", spanishPhrase:"¿cuál es la probabilidad de que cudeda otra vez?",module:"module 20",type:"words"},
+{english:"apology", spanish:"disulpa (f)",englishPhrase:"I deserve an apology", spanishPhrase:"me merezco una disculpa",module:"module 20",type:"words"},
+{english:"excuse", spanish:"excusa (f)",englishPhrase:"all she has is excuses", spanishPhrase:"todo lo que tiene son excusas",module:"module 20",type:"words"},
+{english:"diet", spanish:"dieta (f)",englishPhrase:"a healthy diet of fish and vegetables", spanishPhrase:"una dieta saludable de pescado y verduras",module:"module 20",type:"words"},
+{english:"to explore", spanish:"explorar",englishPhrase:"we'd like to explore other possibilities", spanishPhrase:"now gustaría explorar otras posibilidades",module:"module 20",type:"words"},
+{english:"photographer", spanish:"fotógrafo/a",englishPhrase:"the photographer isn't here yet", spanishPhrase:"la fotógrafa no está aque todavia",module:"module 20",type:"words"},
+{english:"pharmacy, drugstor, chemist", spanish:"farmacia (f)",englishPhrase:"there's a pharmacy around the corner", spanishPhrase:"hay una farmacia a la vuelta de la esquina",module:"module 20",type:"words"},
+{english:"to envy", spanish:"envidar",englishPhrase:"I'm sure she envy's me", spanishPhrase:"estoy seguro/a de que me envidia",module:"module 20",type:"words"},
+{english:"diamond", spanish:"diamante (m)",englishPhrase:"a beautiful diamond ring", spanishPhrase:"un anillo precioso de diamantes",module:"module 20",type:"words"},
+{english:"to frighten, scare", spanish:"asustar",englishPhrase:"you scared me!", spanishPhrase:"¡me asustaste!",module:"module 20",type:"words"},
+{english:"false", spanish:"falso/a",englishPhrase:"a false positive", spanishPhrase:"un falso positive",module:"module 20",type:"words"},
+{english:"size", spanish:"tamaño (m)",englishPhrase:"it's the perfect size for me", spanishPhrase:"es el tamaño perfecto para mi",module:"module 20",type:"words"},
+{english:"total", spanish:"total (m)",englishPhrase:"how many guests in total?", spanishPhrase:"¿cuántos invitados en total?",module:"module 20",type:"words"},
+{english:"to practice", spanish:"practicar",englishPhrase:"he practices all day long", spanishPhrase:"él practica todo el día",module:"module 20",type:"words"},
+{english:"rule", spanish:"regla (f)",englishPhrase:"the rules are very strict", spanishPhrase:"las reglas son muy estrictas",module:"module 20",type:"words"},
+{english:"late, afternoon", spanish:"tarde (f)",englishPhrase:"it's very late in the afternoon", spanishPhrase:"es muy tarde en la tarde",module:"module 20",type:"words"},
+{english:"piano", spanish:"piano (m)",englishPhrase:"I've been playing the piano for 5 years", spanishPhrase:"hace cinco años que toco el piano",module:"module 20",type:"words"},
+{english:"sour, bitter", spanish:"amargo/a",englishPhrase:"the taste is quite sour", spanishPhrase:"el sabor es bastante amargo",module:"module 20",type:"words"},
+{english:"agony", spanish:"agonía (f)",englishPhrase:"they were in agony after the accident", spanishPhrase:"estaban en agonía después del accidente",module:"module 20",type:"words"},
+{english:"very long", spanish:"larguísimo/a",englishPhrase:"a very long day", spanishPhrase:"un día larguísimo",module:"module 20",type:"words"},
+{english:"admirier", spanish:"admirador/a",englishPhrase:"she has many admirers", spanishPhrase:"tiene muchos admiradores",module:"module 20",type:"words"},
+{english:"rocket", spanish:"cohete (m)",englishPhrase:"to launch a rocket", spanishPhrase:"para lanzar un cohete",module:"module 20",type:"words"},
+{english:"to classify", spanish:"clasificar",englishPhrase:"first, we must classify all the data", spanishPhrase:"primero tenemos que clasificar todo los datos",module:"module 20",type:"words"},
+{english:"calendar", spanish:"calendario (m)",englishPhrase:"what date does it say on the calendar?", spanishPhrase:"¿qué fecha dice el calendario?",module:"module 20",type:"words"},
+{english:"to detect", spanish:"detectar",englishPhrase:"did you detect any errors?", spanishPhrase:"¿detectaste algunos errores?",module:"module 20",type:"words"},
+{english:"fair, just", spanish:"justo/a",englishPhrase:"I don't think it's fair", spanishPhrase:"no creo que sea justo",module:"module 20",type:"words"},
+{english:"sexual", spanish:"sexual",englishPhrase:"it contains sexual content", spanishPhrase:"contiene contenido sexual",module:"module 20",type:"words"},
+{english:"incapable", spanish:"incapaz",englishPhrase:"they're capable of understanding", spanishPhrase:"son incapaces de entender",module:"module 20",type:"words"},
+{english:"normally", spanish:"normalmente",englishPhrase:"normally I never do this", spanishPhrase:"normalmente nunca hago esto",module:"module 20",type:"words"},
+{english:"invasion", spanish:"invasión (f)",englishPhrase:"an invasion of privacy", spanishPhrase:"una invasión de la privacidad",module:"module 20",type:"words"},
+{english:"to repare", spanish:"reparar",englishPhrase:"to repair it will be very expensive", spanishPhrase:"repararlo será muy caro",module:"module 20",type:"words"},
+{english:"to select", spanish:"seleccionar",englishPhrase:"it's important to select the right one", spanishPhrase:"es importante seleccionar el correcto",module:"module 20",type:"words"},
+{english:"to hug", spanish:"abrazar",englishPhrase:"she loves to hug her doll", spanishPhrase:"le encanta abrazar a su muñeca",module:"module 20",type:"words"},
+{english:"drink", spanish:"refresco (m) bebida (f)",englishPhrase:"I don't know which one is my drink", spanishPhrase:"no sé cuál es mi bebida",module:"module 20",type:"words"},
+{english:"to control", spanish:"controlar",englishPhrase:"he wants to control his wife", spanishPhrase:"quiere controlar a su esposa",module:"module 20",type:"words"},
+{english:"plan", spanish:"plan (m)",englishPhrase:"we have a new plan", spanishPhrase:"tenemos un nuevo plan",module:"module 20",type:"words"},
+{english:"to demonstrate", spanish:"demostrar",englishPhrase:"I'm going to demonstrate how to do it", spanishPhrase:"voy a demostrar cómo hacerlo",module:"module 20",type:"words"},
+{english:"space", spanish:"espacio (m)",englishPhrase:"I need more space to be comfortable", spanishPhrase:"necesito más expacio para estar cómodo/a",module:"module 20",type:"words"},
 {english:"", spanish:"",englishPhrase:"this part of the story is very interesting", spanishPhrase:"esta parte de la historia es muy interesante",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"i can't handle rejection", spanishPhrase:"no puedo manejar el rechazo",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the tank is full", spanishPhrase:"el tanque está lleno",module:"module 01",type:"phrases"},
@@ -1693,6 +1743,29 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"the news is going to complicate things between them", spanishPhrase:"esta noticia va a complicar las cosas entre ellos",module:"module 19",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"what is the length of the room?", spanishPhrase:"¿cuál es el largo del cuarto?",module:"module 19",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"she wore black boots to the party", spanishPhrase:"llevó botas negras a la fiesta",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the size of the diamond is impressive", spanishPhrase:"el tamaño del diamante es impresionante",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the pharmacy doesn't open in the afternoons", spanishPhrase:"la farmacia no abre en las tardes",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they're going to repair the piano today", spanishPhrase:"hoy van a reparar el piano",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a rocket in space", spanishPhrase:"un cohete en el espacio",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"you should wash the cup before using it", spanishPhrase:"deberías lavar la taza antes de usarla",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a book about exotic rocks", spanishPhrase:"un libro sobre rocas exóticas",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"is it true or false that he gave her an apology", spanishPhrase:"es cierto o falso qué le dió una disculpa",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it was an invasion of privacy", spanishPhrase:"era una invasión de privacidad",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a new possibility to explore", spanishPhrase:"una nueva posibilidad de explorar",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"did you cover the food?", spanishPhrase:"¿cubriste la comida?",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he just wanted to hug you?", spanishPhrase:"sólo quería abrazarte",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she's incapable of controlling her diet", spanishPhrase:"es incapaz de controlar su dieta",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the calendar marks the start of the season", spanishPhrase:"el calendario marca el inicio de la temporada",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the painter demonstrated his talent", spanishPhrase:"el pintor demostró su talento",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the photographer selected and classified his best photos", spanishPhrase:"el fotógrafo seleccionó y clasificó sus mejores fotos",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"normally I don't get scared easily", spanishPhrase:"normalmente no me asusto fácilmente",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the excuse he gave was ridiculous", spanishPhrase:"la excusa que dió fue ridícula",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they need to practice in order to be able to put it together", spanishPhrase:"necesitan practar para poder armarlo",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the administrator spoke with the boss of the trade union", spanishPhrase:"la administradora habló con el jefe del sindicato",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the probability of detecting it is minimal", spanishPhrase:"la probabilidad de detectarlo es mínima",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"that is the exception to the rule", spanishPhrase:"esa es la excepción a la regla",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I think that the total price is fair", spanishPhrase:"creo que el precio total es justo",module:"module 20",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the drink has a sour taste", spanishPhrase:"la bebida tiene un sabor amargo",module:"module 20",type:"phrases"},
     ],
     }
     }
