--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -984,13 +984,13 @@ SELECT {
 {english:"to evaluate, assess", spanish:"evaluar",englishPhrase:"they're going to evaluate the damage", spanishPhrase:"van a evaluar el daño",module:"module 16",type:"words"},
 {english:"columbian", spanish:"colombiano/a",englishPhrase:"they are all columbian", spanishPhrase:"todos son colombianos",module:"module 16",type:"words"},
 {english:"giant", spanish:"gigante",englishPhrase:"he made a giant mistake", spanishPhrase:"cometió un error gigante",module:"module 16",type:"words"},
-{english:"gratitude", spanish:"gratitud (f)",englishPhrase:"thank you for your gratitud", spanishPhrase:"gracias por tu gratitud",module:"module 16",type:"words"},
+{english:"gratitude", spanish:"gratitud (f)",englishPhrase:"thank you for your gratitude", spanishPhrase:"gracias por tu gratitud",module:"module 16",type:"words"},
 {english:"devotion", spanish:"devoción (f)",englishPhrase:"love and devotion is all I feel", spanishPhrase:"amor y devoción es todo lo que siento",module:"module 16",type:"words"},
 {english:"punctual", spanish:"puntual ",englishPhrase:"to be punctual is important", spanishPhrase:"ser puntual es importante",module:"module 16",type:"words"},
 {english:"decent", spanish:"decente",englishPhrase:"it's a decent size", spanishPhrase:"es un tamaño decente",module:"module 16",type:"words"},
 {english:"documentation", spanish:"documentación (f)",englishPhrase:"where is the documentation for this?", spanishPhrase:"¿dónde está la documentación para esto?",module:"module 16",type:"words"},
 {english:"informative", spanish:"informativo/a",englishPhrase:"a very informative meeting", spanishPhrase:"una junta muy informativa",module:"module 16",type:"words"},
-{english:"bee", spanish:"abeja (f)",englishPhrase:"I'm allergic to bees", spanishPhrase:"so alérgico/a a las abejas",module:"module 16",type:"words"},
+{english:"bee", spanish:"abeja (f)",englishPhrase:"I'm allergic to bees", spanishPhrase:"soy alérgico/a a las abejas",module:"module 16",type:"words"},
 {english:"to increase, enlarge", spanish:"ampliar",englishPhrase:"I want to increase my vocabulary", spanishPhrase:"quiero ampliar mi vocabulario",module:"module 16",type:"words"},
 {english:"telephone", spanish:"teléfono (m)",englishPhrase:"can I use your telephone please?", spanishPhrase:"¿puedo usar tu teléfono por favor?",module:"module 16",type:"words"},
 {english:"professor", spanish:"profesor/a",englishPhrase:"she's a professor of mathematics", spanishPhrase:"es profesora de matemáticas",module:"module 16",type:"words"},
@@ -1018,7 +1018,7 @@ SELECT {
 {english:"rumor", spanish:"rumor (m)",englishPhrase:"a nasty rumor", spanishPhrase:"un rumor feo",module:"module 16",type:"words"},
 {english:"golden, gold-platted", spanish:"dorado/a",englishPhrase:"a golden sunset", spanishPhrase:"un atardecer dorado",module:"module 16",type:"words"},
 {english:"crime", spanish:"delito (m)",englishPhrase:"it's a serious crime", spanishPhrase:"es un delito grave",module:"module 16",type:"words"},
-{english:"suffering", spanish:"sufrimiento (m)",englishPhrase:"I could feel her suffering", spanishPhrase:"podía sentir su sufrimiento",module:"module 16",type:"words"},
+{english:"suffering", spanish:"sufrimiento (m)",englishPhrase:"I could feel her suffering", spanishPhrase:"podría sentir su sufrimiento",module:"module 16",type:"words"},
 {english:"turned off", spanish:"apagado/a",englishPhrase:"the light is turned off", spanishPhrase:"la luz está apagada",module:"module 16",type:"words"},
 {english:"to insult", spanish:"insultar",englishPhrase:"I don't want to insult her again", spanishPhrase:"no quiero insultarla otra vez",module:"module 16",type:"words"},
 {english:"insult", spanish:"insulto (m)",englishPhrase:"an insult to my intelligence", spanishPhrase:"un insulto a mi inteligencia",module:"module 16",type:"words"},
@@ -1101,11 +1101,11 @@ SELECT {
 {english:"strangely, funnily enough", spanish:"curiosamente",englishPhrase:"funnily enough, it wasn't even necessary", spanishPhrase:"curiosamente, ni siguiera era necesario",module:"module 18",type:"words"},
 {english:"cover, lid", spanish:"tapa (f)",englishPhrase:"is there a lid for this jar?", spanishPhrase:"¿hay una tapa para este frasco?",module:"module 18",type:"words"},
 {english:"nightmare", spanish:"pesadilla (f)",englishPhrase:"last night I had a nightmare", spanishPhrase:"anoche tuve una pesadilla",module:"module 18",type:"words"},
-{english:"innocence", spanish:"inocencia (f)",englishPhrase:"the innocence of a childe", spanishPhrase:"la inocencia de un niño",module:"module 18",type:"words"},
-{english:"annual", spanish:"annual",englishPhrase:"it's an annual event", spanishPhrase:"es un evento anual",module:"module 18",type:"words"},
+{english:"innocence", spanish:"inocencia (f)",englishPhrase:"the innocence of a child", spanishPhrase:"la inocencia de un niño",module:"module 18",type:"words"},
+{english:"annual", spanish:"anual",englishPhrase:"it's an annual event", spanishPhrase:"es un evento anual",module:"module 18",type:"words"},
 {english:"supreme", spanish:"supremo/a",englishPhrase:"it's a supreme court decision", spanishPhrase:"es una decisión de la corte supremo",module:"module 18",type:"words"},
 {english:"resignation", spanish:"renuncia (f)",englishPhrase:"I gave him my resignation this morning", spanishPhrase:"le di mi renuncia esta mañana",module:"module 18",type:"words"},
-{english:"loan", spanish:"préstamo (m)",englishPhrase:"I need a loan to buy it", spanishPhrase:"necesito un préstimo para comprarlo",module:"module 18",type:"words"},
+{english:"loan", spanish:"préstamo (m)",englishPhrase:"I need a loan to buy it", spanishPhrase:"necesito un préstamo para comprarlo",module:"module 18",type:"words"},
 {english:"prince", spanish:"príncipe (m)",englishPhrase:"the prince of england", spanishPhrase:"el príncipe de inglaterra",module:"module 18",type:"words"},
 {english:"genius", spanish:"genio",englishPhrase:"she's a genius", spanishPhrase:"es un genio",module:"module 18",type:"words"},
 {english:"opera", spanish:"ópera (f)",englishPhrase:"I love going to the opera", spanishPhrase:"me encanta ir a la ópera",module:"module 18",type:"words"},
@@ -1116,8 +1116,8 @@ SELECT {
 {english:"scandal", spanish:"escándalo (m)",englishPhrase:"it's a huge scandal now", spanishPhrase:"es un escándalo enorme ahora",module:"module 18",type:"words"},
 {english:"to seem, appear, look like", spanish:"parecer",englishPhrase:"it appears to be fine now", spanishPhrase:"parece que está bien ahora",module:"module 18",type:"words"},
 {english:"to advance, move forward", spanish:"avanzar",englishPhrase:"he says you need to move forward a bit", spanishPhrase:"dice que necesitas avanzar un poco",module:"module 18",type:"words"},
-{english:"sun, sunshinie", spanish:"sol (m)",englishPhrase:"it's very sunny today", spanishPhrase:"hay mucho sol hoy",module:"module 18",type:"words"},
-{english:"shopping, purchase", spanish:"compra (f)",englishPhrase:"it's a ncecessary purchase", spanishPhrase:"es una compra necesaria",module:"module 18",type:"words"},
+{english:"sun, sunshine", spanish:"sol (m)",englishPhrase:"it's very sunny today", spanishPhrase:"hay mucho sol hoy",module:"module 18",type:"words"},
+{english:"shopping, purchase", spanish:"compra (f)",englishPhrase:"it's a necessary purchase", spanishPhrase:"es una compra necesaria",module:"module 18",type:"words"},
 {english:"to confirm", spanish:"confirmar",englishPhrase:"I need to confirm it first", spanishPhrase:"necesito confirmarlo primero",module:"module 18",type:"words"},
 {english:"little while", spanish:"rato (m)",englishPhrase:"I'll be back in a little while", spanishPhrase:"regreso en un rato",module:"module 18",type:"words"},
 {english:"queue, line, tail", spanish:"cola (f)",englishPhrase:"the queue at the supermarket was massive", spanishPhrase:"la cola era enorme en el super",module:"module 18",type:"words"},
@@ -1185,16 +1185,16 @@ SELECT {
 {english:"exotic", spanish:"exótico/a",englishPhrase:"we travelled to an exotic location", spanishPhrase:"viajamos a un lugar exótico",module:"module 20",type:"words"},
 {english:"trade union", spanish:"sindicato (m)",englishPhrase:"it's a powerful trade union", spanishPhrase:"es un sindicato muy poderoso",module:"module 20",type:"words"},
 {english:"probability", spanish:"probabilidad (f)",englishPhrase:"what is the probability of it happening again?", spanishPhrase:"¿cuál es la probabilidad de que cudeda otra vez?",module:"module 20",type:"words"},
-{english:"apology", spanish:"disulpa (f)",englishPhrase:"I deserve an apology", spanishPhrase:"me merezco una disculpa",module:"module 20",type:"words"},
+{english:"apology", spanish:"disculpa (f)",englishPhrase:"I deserve an apology", spanishPhrase:"me merezco una disculpa",module:"module 20",type:"words"},
 {english:"excuse", spanish:"excusa (f)",englishPhrase:"all she has is excuses", spanishPhrase:"todo lo que tiene son excusas",module:"module 20",type:"words"},
 {english:"diet", spanish:"dieta (f)",englishPhrase:"a healthy diet of fish and vegetables", spanishPhrase:"una dieta saludable de pescado y verduras",module:"module 20",type:"words"},
 {english:"to explore", spanish:"explorar",englishPhrase:"we'd like to explore other possibilities", spanishPhrase:"now gustaría explorar otras posibilidades",module:"module 20",type:"words"},
-{english:"photographer", spanish:"fotógrafo/a",englishPhrase:"the photographer isn't here yet", spanishPhrase:"la fotógrafa no está aque todavia",module:"module 20",type:"words"},
-{english:"pharmacy, drugstor, chemist", spanish:"farmacia (f)",englishPhrase:"there's a pharmacy around the corner", spanishPhrase:"hay una farmacia a la vuelta de la esquina",module:"module 20",type:"words"},
+{english:"photographer", spanish:"fotógrafo/a",englishPhrase:"the photographer isn't here yet", spanishPhrase:"la fotógrafa no está aquí todavia",module:"module 20",type:"words"},
+{english:"pharmacy, drugstore, chemist", spanish:"farmacia (f)",englishPhrase:"there's a pharmacy around the corner", spanishPhrase:"hay una farmacia a la vuelta de la esquina",module:"module 20",type:"words"},
 {english:"to envy", spanish:"envidar",englishPhrase:"I'm sure she envy's me", spanishPhrase:"estoy seguro/a de que me envidia",module:"module 20",type:"words"},
 {english:"diamond", spanish:"diamante (m)",englishPhrase:"a beautiful diamond ring", spanishPhrase:"un anillo precioso de diamantes",module:"module 20",type:"words"},
 {english:"to frighten, scare", spanish:"asustar",englishPhrase:"you scared me!", spanishPhrase:"¡me asustaste!",module:"module 20",type:"words"},
-{english:"false", spanish:"falso/a",englishPhrase:"a false positive", spanishPhrase:"un falso positive",module:"module 20",type:"words"},
+{english:"false", spanish:"falso/a",englishPhrase:"a false positive", spanishPhrase:"un falso positivo",module:"module 20",type:"words"},
 {english:"size", spanish:"tamaño (m)",englishPhrase:"it's the perfect size for me", spanishPhrase:"es el tamaño perfecto para mi",module:"module 20",type:"words"},
 {english:"total", spanish:"total (m)",englishPhrase:"how many guests in total?", spanishPhrase:"¿cuántos invitados en total?",module:"module 20",type:"words"},
 {english:"to practice", spanish:"practicar",englishPhrase:"he practices all day long", spanishPhrase:"él practica todo el día",module:"module 20",type:"words"},
@@ -1204,17 +1204,17 @@ SELECT {
 {english:"sour, bitter", spanish:"amargo/a",englishPhrase:"the taste is quite sour", spanishPhrase:"el sabor es bastante amargo",module:"module 20",type:"words"},
 {english:"agony", spanish:"agonía (f)",englishPhrase:"they were in agony after the accident", spanishPhrase:"estaban en agonía después del accidente",module:"module 20",type:"words"},
 {english:"very long", spanish:"larguísimo/a",englishPhrase:"a very long day", spanishPhrase:"un día larguísimo",module:"module 20",type:"words"},
-{english:"admirier", spanish:"admirador/a",englishPhrase:"she has many admirers", spanishPhrase:"tiene muchos admiradores",module:"module 20",type:"words"},
+{english:"admirer", spanish:"admirador/a",englishPhrase:"she has many admirers", spanishPhrase:"tiene muchos admiradores",module:"module 20",type:"words"},
 {english:"rocket", spanish:"cohete (m)",englishPhrase:"to launch a rocket", spanishPhrase:"para lanzar un cohete",module:"module 20",type:"words"},
 {english:"to classify", spanish:"clasificar",englishPhrase:"first, we must classify all the data", spanishPhrase:"primero tenemos que clasificar todo los datos",module:"module 20",type:"words"},
 {english:"calendar", spanish:"calendario (m)",englishPhrase:"what date does it say on the calendar?", spanishPhrase:"¿qué fecha dice el calendario?",module:"module 20",type:"words"},
 {english:"to detect", spanish:"detectar",englishPhrase:"did you detect any errors?", spanishPhrase:"¿detectaste algunos errores?",module:"module 20",type:"words"},
 {english:"fair, just", spanish:"justo/a",englishPhrase:"I don't think it's fair", spanishPhrase:"no creo que sea justo",module:"module 20",type:"words"},
 {english:"sexual", spanish:"sexual",englishPhrase:"it contains sexual content", spanishPhrase:"contiene contenido sexual",module:"module 20",type:"words"},
-{english:"incapable", spanish:"incapaz",englishPhrase:"they're capable of understanding", spanishPhrase:"son incapaces de entender",module:"module 20",type:"words"},
+{english:"incapable", spanish:"incapaz",englishPhrase:"they're incapable of understanding", spanishPhrase:"son incapaces de entender",module:"module 20",type:"words"},
 {english:"normally", spanish:"normalmente",englishPhrase:"normally I never do this", spanishPhrase:"normalmente nunca hago esto",module:"module 20",type:"words"},
 {english:"invasion", spanish:"invasión (f)",englishPhrase:"an invasion of privacy", spanishPhrase:"una invasión de la privacidad",module:"module 20",type:"words"},
-{english:"to repare", spanish:"reparar",englishPhrase:"to repair it will be very expensive", spanishPhrase:"repararlo será muy caro",module:"module 20",type:"words"},
+{english:"to repair", spanish:"reparar",englishPhrase:"to repair it will be very expensive", spanishPhrase:"repararlo será muy caro",module:"module 20",type:"words"},
 {english:"to select", spanish:"seleccionar",englishPhrase:"it's important to select the right one", spanishPhrase:"es importante seleccionar el correcto",module:"module 20",type:"words"},
 {english:"to hug", spanish:"abrazar",englishPhrase:"she loves to hug her doll", spanishPhrase:"le encanta abrazar a su muñeca",module:"module 20",type:"words"},
 {english:"drink", spanish:"refresco (m) bebida (f)",englishPhrase:"I don't know which one is my drink", spanishPhrase:"no sé cuál es mi bebida",module:"module 20",type:"words"},
@@ -1646,7 +1646,7 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"he insulted me again yesterday", spanishPhrase:"me insultó otra vez ayer",module:"module 16",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"I see it further ahead, it's already open", spanishPhrase:"lo veo más adelante, ya está abierto",module:"module 16",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"a creative and intelligent boy", spanishPhrase:"un niño creativo e intelligente",module:"module 16",type:"phrases"},
-{english:"", spanish:"",englishPhrase:"the lead version weighs more", spanishPhrase:"la version del plomo pesa más",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the lead versión weighs more", spanishPhrase:"la version del plomo pesa más",module:"module 16",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"is it new or used", spanishPhrase:"¿está nuevo o usado?",module:"module 16",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"it was still intact", spanishPhrase:"todavía estaba intacto",module:"module 16",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"it's perfect for me", spanishPhrase:"es perfecto para mí",module:"module 16",type:"phrases"},
@@ -1660,7 +1660,7 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"would it be appropriate to call her now?", spanishPhrase:"¿sería apropiado llamarle ahora?",module:"module 16",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"to be professional, one must always be punctual", spanishPhrase:"para ser profesional, siempre hay que ser puntual ",module:"module 16",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"it's a story about devotion and modern love", spanishPhrase:"es una historia sobre la devoción y el amor moderno",module:"module 16",type:"phrases"},
-{english:"", spanish:"",englishPhrase:"it's a decent amount of money", spanishPhrase:"es una candidad decente de dinero",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's a decent amount of money", spanishPhrase:"es una cantidad decente de dinero",module:"module 16",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"he has an attitude of gratitude", spanishPhrase:"tiene una actitud de gratitud",module:"module 16",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"it has the option of firing automatically", spanishPhrase:"tiene la opción de disparar automáticamente",module:"module 17",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the identification is in his wallet", spanishPhrase:"la identificación está en su cartera",module:"module 17",type:"phrases"},
